OpenHome/Net/Bindings/Cs/ControlPoint/CpService.cs


        /// <summary>
        /// Constructor for binary input argument for an action
        /// </summary>
        /// <remarks>Intended to be write only (its value is written on construction and not be later read)</remarks>
        /// <param name="aParameter">Defines the name for the argument.
        /// Must have been previously added to the action using Action.AddInputParameter</param>
        /// <param name="aData">Value for the argument</param>
        public ArgumentBinary(ParameterBinary aParameter, byte[] aData)
        {
            GCHandle h = GCHandle.Alloc(aData, GCHandleType.Pinned);
            iHandle = ActionArgumentCreateBinaryInput(aParameter.Handle(), h.AddrOfPinnedObject(), aData.Length);
            h.Free();
        }

        /// <summary>
        /// Constructor for binary output argument for an action
        /// </summary>
        /// <remarks>Intended to be created without any value.  The value is later set after
        /// CpService.InvokeAction is called but before the invocation's callback is run)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddOutputParameter</param>
        public ArgumentBinary(ParameterBinary aParameter)
        {
            iHandle = ActionArgumentCreateBinaryOutput(aParameter.Handle());
        }

        /// <summary>
        /// Read the value of a binary argument.
        /// </summary>
        /// <remarks>Only intended for use with output arguments inside the invocation completed callback.
        /// Can only be called once as the first call extracts the string data from the underlying native object</remarks>
        /// <returns>Current value of the argument</returns>
        byte[] Value()
        {
            IntPtr data;
            uint len;
            ActionArgumentGetValueBinary(iHandle, out data, out len);
            byte[] ret = new byte[len];
            Marshal.Copy(data, ret, 0, (int)len);
            OhNetFree(data);
            return ret;
        }
    }

    /// <summary>
    /// Utility class used to execute a single action.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class Invocation
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr CpServiceInvocation(IntPtr aService, IntPtr aAction, CpProxy.CallbackActionComplete aCallback, IntPtr aPtr);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpInvocationAddInput(IntPtr aInvocation, IntPtr aArgument);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpInvocationAddOutput(IntPtr aInvocation, IntPtr aArgument);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern uint CpInvocationError(IntPtr aInvocation, out uint aErrorCode, out IntPtr aErrorDesc);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void OhNetFree(IntPtr aPtr);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int CpInvocationOutputInt(IntPtr aInvocation, uint aIndex);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern uint CpInvocationOutputUint(IntPtr aInvocation, uint aIndex);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern uint CpInvocationOutputBool(IntPtr aInvocation, uint aIndex);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpInvocationGetOutputString(IntPtr aInvocation, uint aIndex, out IntPtr aData, out uint aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void CpInvocationGetOutputBinary(IntPtr aInvocation, uint aIndex, out IntPtr aData, out uint aLen);

        private CpProxy.CallbackAsyncComplete iAsyncComplete;
        private CpProxy.CallbackActionComplete iCallbackAsyncComplete;
        private IntPtr iHandle;
        private CpService iService;
        private List<Argument> iInputArgs;
        private List<Argument> iOutputArgs;

        /// <summary>
        /// Constructor.  Not intended for external use (use CpService.Invocation instead)
        /// </summary>
        /// <param name="aService">Service the action is being invoked on</param>
        /// <param name="aAction">Handle to the action being invoked</param>
        /// <param name="aCallback">Callback to run when the action completes</param>
        internal Invocation(CpService aService, IntPtr aAction, CpProxy.CallbackAsyncComplete aCallback)
        {
            iService = aService;
            iInputArgs = new List<Argument>();
            iOutputArgs = new List<Argument>();
            GCHandle gch = GCHandle.Alloc(this); /* no need to store gch as a member as AsyncComplete is guaranteed
                                                    to be called, even in error cases */
            iAsyncComplete = aCallback;
            iCallbackAsyncComplete = new CpProxy.CallbackActionComplete(AsyncComplete);
            IntPtr ptr = GCHandle.ToIntPtr(gch);
            iHandle = CpServiceInvocation(aService.Handle(), aAction, iCallbackAsyncComplete, ptr);
        }

        /// <summary>
        /// Add an input argument to an invocation
        /// </summary>
        /// <param name="aArgument">Input argument being added.  Ownership passes to the invocation</param>
        public void AddInput(Argument aArgument)
        {
            iInputArgs.Add(aArgument);
            CpInvocationAddInput(iHandle, aArgument.Handle());
        }

        /// <summary>
        /// Add an output argument to an invocation
        /// </summary>
        /// <param name="aArgument">Output argument being added.  Ownership passes to the invocation</param>
        public void AddOutput(Argument aArgument)
        {
            iOutputArgs.Add(aArgument);
            CpInvocationAddOutput(iHandle, aArgument.Handle());
        }

        /// <summary>
        /// Check whether the invocation failed
        /// </summary>
        /// <remarks>Only intended for use in the invocation complete callback</remarks>
        /// <returns>true if the invocation failed; false if it succeeded</returns>
        public static bool Error(IntPtr aHandle, out uint aErrorCode, out string aErrorDesc)
        {
            uint code;
            IntPtr desc;
            uint err = CpInvocationError(aHandle, out code, out desc);
            aErrorCode = code;
            aErrorDesc = InteropUtils.PtrToStringUtf8(desc);
            return (err != 0);
        }

        /// <summary>
        /// Utility to retrieve the value of an integer type output argument
        /// </summary>
        /// <param name="aHandle">Invocation handle</param>
        /// <param name="aIndex">Zero-based index into array of output arguments.
        /// Must refer to an ArgumentInt.</param>
        /// <returns>Value of the integer output argument</returns>
        public static int OutputInt(IntPtr aHandle, uint aIndex)
        {
            return CpInvocationOutputInt(aHandle, aIndex);
        }

        /// <summary>
        /// Utility to retrieve the value of an unsigned integer type output argument
        /// </summary>
        /// <param name="aHandle">Invocation handle</param>
        /// <param name="aIndex">Zero-based index into array of output arguments.
        /// Must refer to an ArgumentUint.</param>
        /// <returns>Value of the unsigned integer output argument</returns>
        public static uint OutputUint(IntPtr aHandle, uint aIndex)
        {
            return CpInvocationOutputUint(aHandle, aIndex);
        }

        /// <summary>
        /// Utility to retrieve the value of a boolean type output argument
        /// </summary>
        /// <param name="aHandle">Invocation handle</param>
        /// <param name="aIndex">Zero-based index into array of output arguments.
        /// Must refer to an ArgumentBool.</param>
        /// <returns>Value of the boolean output argument</returns>
        public static bool OutputBool(IntPtr aHandle, uint aIndex)
        {
            uint val = CpInvocationOutputBool(aHandle, aIndex);
            return (val != 0);
        }

        /// <summary>
        /// Utility to retrieve the value of a string type output argument
        /// </summary>
        /// <remarks>Must only be called once per output argument.  (The first call extracts
        /// the string data from the underlying native object so later calls would return an
        /// empty string.)</remarks>
        /// <param name="aHandle">Invocation handle</param>
        /// <param name="aIndex">Zero-based index into array of output arguments.
        /// Must refer to an ArgumentString.</param>
        /// <returns>Value of the string output argument</returns>
        public static String OutputString(IntPtr aHandle, uint aIndex)
        {
            IntPtr ptr;
            uint len;
            CpInvocationGetOutputString(aHandle, aIndex, out ptr, out len);
            String str = InteropUtils.PtrToStringUtf8(ptr, len);
            OhNetFree(ptr);
            return str;
        }

        /// <summary>
        /// Utility to retrieve the value of a binary type output argument
        /// </summary>
        /// <remarks>Must only be called once per output argument.  (The first call extracts
        /// the binary data from the underlying native object so later calls would return an
        /// empty string.)</remarks>
        /// <param name="aHandle">Invocation handle</param>
        /// <param name="aIndex">Zero-based index into array of output arguments.
        /// Must refer to an ArgumentString.</param>
        /// <returns>Value of the string output argument</returns>
        public static byte[] OutputBinary(IntPtr aHandle, uint aIndex)
        {
            IntPtr data;
            uint len;
            CpInvocationGetOutputBinary(aHandle, aIndex, out data, out len);
            if (data == IntPtr.Zero)
            {
                return null;
            }
            byte[] bin = new byte[len];
            Marshal.Copy(data, bin, 0, (int)len);
            OhNetFree(data);
            return bin;
        }

        internal IntPtr Handle()
        {
            return iHandle;
        }

#if IOS
        [MonoPInvokeCallback (typeof (CpProxy.CallbackActionComplete))]
#endif
        private static void AsyncComplete(IntPtr aPtr, IntPtr aAsyncHandle)
        {
            GCHandle gch = GCHandle.FromIntPtr(aPtr);
            Invocation self = (Invocation)gch.Target;
            try
            {
                self.iAsyncComplete(aAsyncHandle);
            }
            catch (ProxyError)
            {
            }
            catch (Exception e)
            {
                System.Diagnostics.Debug.WriteLine("WARNING: unexpected exception {0} thrown", new object[] { e });
                System.Diagnostics.Debug.WriteLine("         Only ProxyError can be thrown by action complete delegates");
            }
            gch.Free();
            self.iService.InvocationComplete(self);
        }
    }
